SCEP-2-5 implementation for SNTP-9 ingestion-search PoC